# rust-websvc

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: master.yml
docker/: Dockerfile  docker-compose.yml
docs/: README.md
src/: main.rs
